--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-yfinance>=0.2.0
-pandas>=1.3.0
-numpy>=1.21.0
-pytest>=7.0.0 
+multiprocess==0.70.16
+numpy==1.26.3
+pandas==1.4.4
+yfinance==0.2.54
