--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-multiprocess==0.70.16
-numpy==1.26.3
-pandas==1.4.4
-yfinance==0.2.61
-akshare==1.16.98
-streamlit
-plotly==5.9.0
-streamlit-aggrid
+multiprocess==0.70.18
+numpy==2.3.0
+pandas==2.3.0
+yfinance==0.2.63
+akshare==1.17.5
+streamlit==1.45.1
+plotly==6.1.2
+streamlit-aggrid==1.1.5.post1
